--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div><span class="text">Page 1</span></div>
             <div><span class="text">Page 2</span></div>
 			<div><span class="text">Page 3</span></div>
-			<a href="demos/magazine/index.html">Click Me!</a>
+			<a href="demos/magazine/Portfolio.html">Click Me!</a>
         </div>
     </body>
 </html>
