--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <!--Additional JS Library for turning pages http://www.turnjs.com/-->
-<script type="text/javascript" src="../../turn.min.js"></script>
+<script type="text/javascript" src="turn.min.js"></script>
 <style>
 	@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 </style>
