--- a/index.html
+++ b/index.html
@@ -4,38 +4,87 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--Additional JS Library for turning pages http://www.turnjs.com/-->
 <script type="text/javascript" src="turn.min.js"></script>
-<style>
-	@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-</style>
+<!--Turn.js-->
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('#magazine').turn({
+			display: 'double',
+			acceleration: true,
+			autoCenter: true,
+			gradients: !$.isTouch,
+			elevation:50,
+			when: {
+				turned: function(e, page) {
+				/*console.log('Current view: ', $(this).turn('view'));*/
+				}
+			}
+		});
+	});
+	/*checks if left or right arrow key*/
+	$(window).bind('keydown', function(e){
+		
+		if (e.keyCode==37)
+			$('#magazine').turn('previous');
+		else if (e.keyCode==39)
+			$('#magazine').turn('next');
+			
+	});
+	/* added */
+	$("button").click(function(){
+		var resName = $("#response-name").val();
+		var email = $("#response-email").val();
+		//$("#response-area").append(r);
+		loadresponse(resName);
+		console.log("name:" + resName);
+		$("#response-name").val("");
+		$("#response-email").val("");
+	});
+
+	function loadresponse(response){
+		
+		var responseInput = {
+			"text": resName }
+		}
+		$.ajax({
+			url: "http://localhost:5000/echo/",
+			type: "POST",
+			data: JSON.stringify(responseInput),
+			contentType: "application/json",
+			success: displayResponse
+	});
+
+	function displayResponse(data)
+	{
+		console.log("success!"+ data);
+		for(key in data){
+		//console.log(key+" "+data[key]);
+		$("#response-area").append(key+" "+data[key]+"<br>");
+	};
+};
+
+</script>
+<style>@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');</style>
 <style type="text/css">
 /*
 TEAL rgb(0,139,177)
 DARK PURPLE #240B3f
 PINK  #9E5073
-
 */
 body{
 	background:white;
 	font-family: 'Raleway', sans-serif;
 }
 #magazine{
-	/*
-	width:1050px;
-	height:650px;
-	*/
 	width: 820px;
 	height: 500px;
-	/*background: lightgray;*/
 	background: #9E5073;
 	margin: auto;
 	
 }
 #magazine .turn-page{
-	/*background-color:#ccc; */
 	background-color: rgb(0,139,177);
 	background-size:100% 100%;
 }
-/* Add a black background color to the top navigation */
 .topnav {
   background-color:#240B3F;
   overflow: hidden;
@@ -81,15 +130,30 @@ body{
 #about img {
 	width: 300px;
 }
+#contact {
+	text-align: center;
+	font-size: x-large;
+}
+button {
+	background-color: #6E2A44;
+  	border: none;
+  	color: white;
+  	padding: 15px 32px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+}
 
 </style>
 </head>
 <body>
 	<div class="topnav">
-		<a class="active" href="#home">Marley Ross</a>
-		<a href="#home">Home</a>
+		<a class="active" href=".topnav">Marley Ross</a>
+		<a href="#top-text">Home</a>
 		<a href="#portfolio">Portfolio</a>
 		<a href="#about">About</a>
+		<a href="#contact">Contact</a>
 	  </div>
 	<div id="top-text">
 		<h1>Welcome!</h1>
@@ -117,43 +181,69 @@ body{
 		<h2>About Me</h2>
 		<img src="ToonMeProfile.png">
 		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-			Minus nesciunt incidunt delectus vero, quisquam quos minima 
-			temporibus aperiam doloremque saepe sequi facilis laboriosam quae in tempora veniam alias eligendi. Iusto.
+			AHHHHHHHH HAHAHHAH HAHHAH AAHHHHH AHHHA HHAAAHH AHHHHHHH AHHHA HHHAH  AHH AHHA HAHHA AAHHHHHHHHHH
+			AHHHH AHHH AHHHHHHHHHHH AHHDJDJDHSSKSK
 		</p>
 		
 
 	</div>
+	<div id="contact">
+			<br>
+			<h2>Contact Me</h2>
+			<p>
+			<form action="POST" name="example" onsubmit="return false;" href="http://localhost:5000/echo/">
+				<label for="name">Name:</label> <input id="response-name" type="text" name="name"> <br>
+				<label for="email">Email:</label> <input id="email" type="text" name="email"> <br>
+				<br>
+				<button>Send</button>
+			</form>
+			<br>
+			<h2>Thank you</h2>
+			<p id="response-area">
 
-
-<script type="text/javascript">
-
-	$(window).ready(function() {
-		$('#magazine').turn({
-							display: 'double',
-							acceleration: true,
-							autoCenter: true,
-							gradients: !$.isTouch,
-							elevation:50,
-							when: {
-								turned: function(e, page) {
-									/*console.log('Current view: ', $(this).turn('view'));*/
-								}
-							}
-						});
-	});
-	
-	
-	$(window).bind('keydown', function(e){
-		
-		if (e.keyCode==37)
-			$('#magazine').turn('previous');
-		else if (e.keyCode==39)
-			$('#magazine').turn('next');
-			
-	});
-
-</script>
+			</p>
+	</div>
 
 </body>
 </html>
+<!--
+$(document).ready(function( ){
+
+	$("button").click(function(){
+		var response = $(#response).val();
+		$("#response-area").append(response);
+		loadresponse(response);
+		console.log("name:" + response[0]);
+	});
+	$("button").click(function(){
+		var response = "$("#response").val();
+		//$("#response-area").append(response);
+		loadresponse(response);
+		console.log("the response:" + response);
+	});
+
+	// object  json stringify
+	function loadresponse(response){
+
+		var responseInput = {
+			"text": resName }
+		}
+		$.ajax({
+			url: "http://localhost:5000/echo/",
+			type: "POST",
+			data: JSON.stringify(responseInput),
+			contentType: "application/json",
+			success: displayResponse
+	});
+
+	function displayResponse(data){
+
+		console.log("success!"+ data);
+		for(key in data){
+			//console.log(key+" "+data[key]);
+			$("#response-area").append(key+" "+data[key]+"<br>");
+		};
+	}
+	};
+});
+-->
