--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ PINK  #9E5073
 body{
 	background:white;
 	font-family: 'Raleway', sans-serif;
+	padding-bottom: 40px;
 }
 #magazine{
 	width: 820px;
