--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@ button {
 #thanks {
 	text-align: center;
 }
-
+#footer {
+	background-color:#240B3F;
+}
 </style>
 </head>
 <body>
@@ -128,6 +130,11 @@ button {
 	<div id="about">
 		<h2>About Me</h2>
 		<img src="ToonMeProfile.png">
+		<h3>Majors</h3>
+		<p>Illustration, Technical Theatre Design</p>
+		<h3>Status</h3>
+		<img src="https://www.google.com/url?sa=i&url=http%3A%2F%2Fpixelartmaker.com%2Fart%2F92d43791e6f07e5&psig=AOvVaw1qbSb03esVmwRcytvD5f73&ust=1587880340482000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMC_ha_xgukCFQAAAAAdAAAAABAD">
+		<h3>Current Stress Level</h3>
 		<p>
 			AHHHHHHHH HAHAHHAH HAHHAH AAHHHHH AHHHA HHAAAHH AHHHHHHH AHHHA HHHAH  AHH AHHA HAHHA AAHHHHHHHHHH
 			AHHHH AHHH AHHHHHHHHHHH AHHDJDJDHSSKSK
@@ -152,6 +159,11 @@ button {
 	</div>
 	<div id="thanks">
 		<h2>Thank you</h2>
+	</div>
+	<div id="footer">
+		<br>
+		<h2>mross19@georgefox.edu</h2>
+		<br>
 	</div>
 
 </body>
