--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@ button {
 }
 #footer {
 	background-color:#240B3F;
+	color:white;
+	margin: 0px;
+	padding: 0px;
 }
 </style>
 </head>
@@ -101,7 +104,7 @@ button {
 	<div class="topnav">
 		<a class="active" href=".topnav">Marley Ross</a>
 		<a href="#top-text">Home</a>
-		<a href="#portfolio">Portfolio</a>
+		<a href="#mag-background">Portfolio</a>
 		<a href="#about">About</a>
 		<a href="#contact">Contact</a>
 	  </div>
@@ -130,15 +133,17 @@ button {
 	<div id="about">
 		<h2>About Me</h2>
 		<img src="ToonMeProfile.png">
-		<h3>Majors</h3>
+		<h3>Majors:</h3>
 		<p>Illustration, Technical Theatre Design</p>
-		<h3>Status</h3>
-		<img src="https://www.google.com/url?sa=i&url=http%3A%2F%2Fpixelartmaker.com%2Fart%2F92d43791e6f07e5&psig=AOvVaw1qbSb03esVmwRcytvD5f73&ust=1587880340482000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMC_ha_xgukCFQAAAAAdAAAAABAD">
-		<h3>Current Stress Level</h3>
+		<h3>Fun Fact:</h3>
+		<p>I have 5 cats: Sadie, Sabrina, Minerva, Calvin, and Hobbes</p>
+		<h3>Current Stress Level:</h3>
 		<p>
 			AHHHHHHHH HAHAHHAH HAHHAH AAHHHHH AHHHA HHAAAHH AHHHHHHH AHHHA HHHAH  AHH AHHA HAHHA AAHHHHHHHHHH
-			AHHHH AHHH AHHHHHHHHHHH AHHDJDJDHSSKSK
+			AHHHH AHHH AHHHHHHHHHHH
 		</p>
+		<h3>Status:</h3>
+		<img src="PixelArt.png">
 		
 
 	</div>
@@ -162,9 +167,11 @@ button {
 	</div>
 	<div id="footer">
 		<br>
-		<h2>mross19@georgefox.edu</h2>
+		<h2>mross19, instagram: @marleydesigns</h2>
 		<br>
+		
 	</div>
+	<hr>
 
 </body>
 </html>
