--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ button {
 		<p>I have 5 cats: Sadie, Sabrina, Minerva, Calvin, and Hobbes</p>
 		<h3>Current Stress Level:</h3>
 		<p>
-			AHHHHHHHH HAHAHHAH HAHHAH AAHHHHH AHHHA HHAAAHH AHHHHHHH AHHHA HHHAH  AHH AHHA HAHHA AAHHHHHHHHHH
-			AHHHH AHHH AHHHHHHHHHHH
+			AHHhHHHHH HAHAaHHAH aAHHaaaAH AAHHHHH AHHHA HHAAAHH aaaAAaHHHH AaHA HHHAH  AHH AHHA HAHHA AAHHHHHHHHHH
+			AaHH AHHH AHHHHHHHAHHH
 		</p>
 		<h3>Status:</h3>
 		<img src="PixelArt.png">
